--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+  font-size: 32px;
+  text-shadow: 2px 1px #00B9E1;
+
+  @media screen and (min-width: 600px) {
+    font-size: 48px;
+  }
+
+  @media screen and (min-width: 900px) {
+    font-size: 64px;
+  }
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+p {
+  font-size: 16px;
+}
+
+hr {
+  border-color: #00B9E1;
+  margin: 8px 0;
+}
+
+img {
+  background-color: white;
+}
+
+ul {
+  list-style-type: circle;
+}
