--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 
 h1 {
   font-size: 32px;
+  font-weight: 700;
   text-shadow: 2px 1px #00B9E1;
 
   @media screen and (min-width: 600px) {
@@ -34,4 +35,8 @@ hr {
 
 img {
   background-color: white;
+}
+
+html * {
+  font-family: Raleway;
 }
