Use Firestore for database
* Add `vercel.json` to hopefully fix Vercel deployments
* Remove `fetchOnServer: false` from everywhere
* Update Home page (new year + new skills)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,3 +48,21 @@ img {
 html * {
   font-family: Raleway;
 }
+
+/* Disable text selection */
+h1, h2, h3, h4, p {
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
+/* Disable image dragging */
+img {
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
